<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aidenbarrett.geoquiz.ResultsActivity"
    android:background="@android:color/holo_green_dark">

    <!--Display Results Banner-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_results"
        android:text="@string/end_results"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        />

    <!--Display Correct Answers Layout-->
    <LinearLayout
        android:layout_marginTop="50dp"
        android:id="@+id/correct_ans_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/end_results"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/correct_values"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct_num"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <!--Display Incorrect Answers Layout-->
    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/incorrect_ans_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/correct_ans_position"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/incorrect_values"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrect_values"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <!--Display Two Buttons for Retake and Share-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/true_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:backgroundTint="@android:color/holo_orange_light" />
        <Button
            android:id="@+id/false_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:backgroundTint="@android:color/holo_orange_light" />

    </LinearLayout>


</RelativeLayout>

